--- a/Lab3/Lab3_Logitic_Regression.ipynb
+++ b/Lab3/Lab3_Logitic_Regression.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -43,13 +45,17 @@
     "- Determine the number of student \"m\" from the input data \"students_results\".\n",
     "- Extract exam 1, exam 2 scores and the result columns respectively in \"x_1\", \"x_2\" and \"y\".  \n",
     "**Hint:** The shape of \"x_1\", \"x_2\" and \"y\" arrays should be (m,1) for the following questions and not (m,). You could use [newaxis numpy](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html#basic-slicing-and-indexing) object to add a new axis of length one.\n",
-    "- Determine the number of features \"n\" (number of columns of array \"X\")."
+    "- Determine the number of features \"n\" (number of columns of array \"X\").\n",
+    "\n",
+    "**Note:** The two exams score have the same scale [0,20]. Thus, we don't need to do feature normalization.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
@@ -81,7 +87,7 @@
     "As we see, the linear regression model is not suitable for classification problem (output=0/1) because it may result in $h_\\theta(x_i)=\\theta^\\top x_i<0$ or $h_\\theta(x_i)=\\theta^\\top x_i>1$. Moreover, the linear regression will be very sensitive to an additional data in case of classification problem. Hence, we choose little bit different model the logistic regression where : $$h_\\theta(x_i)=sigmoid(\\theta^\\top x_i)=\\frac{1}{1+e^{-\\theta^\\top x_i}}$$\n",
     "This new hypothesis formulas will ensure: $0\\leq h_\\theta(x_i)\\leq 1$  \n",
     "\n",
-    "**Recall:** The Mean Squared Error (MSE) cost function equal: $$MSE(X) = \\frac{1}{2~m} \\sum_{i=1}^{m}{(h_\\theta(x_i) - y_i)^2}$$\n",
+    "**Recall:** The Mean Squared Error (MSE) cost function equal: $$MSE(\\theta) = \\frac{1}{2~m} \\sum_{i=1}^{m}{(h_\\theta(x_i) - y_i)^2}$$\n",
     "\n",
     "<font color=\"blue\">**Question 3: **</font>\n",
     "- Implement the \"sigmoid\" function that helps to calculate the hypothesis $h_\\theta$ (given in the previous equation). \n",
@@ -91,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from mpl_toolkits.mplot3d.axes3d import*\n",
@@ -148,13 +156,15 @@
    "source": [
     "#### Logistic cost function\n",
     "<font color=\"blue\">**Question 4: **</font> \n",
-    "- Implement the \"cost_func\" function that evaluate and return the logistic cost function given in the following equation (make a vectorized implementation): $$cost\\_func(x)=\\frac{-1}{m}\\sum_{i=1}^{m}\\left [y\\times log(h_\\theta(x))+(1-y)\\times log(1-h_\\theta(x))\\right ]$$"
+    "- Implement the \"cost_func\" function that evaluate and return the logistic cost function given in the following equation (make a vectorized implementation): $$J(\\theta)=\\frac{-1}{m}\\sum_{i=1}^{m}\\left [y\\times log(h_\\theta(x))+(1-y)\\times log(1-h_\\theta(x))\\right ]$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cost_func(theta):\n",
@@ -227,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -276,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# calculate the optimal value of theta that minimize cost function\n",
@@ -311,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from matplotlib.patches import Rectangle\n",
@@ -362,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.optimize import fmin_bfgs\n",
@@ -403,13 +421,17 @@
     "\n",
     "<font color=\"blue\">**Question 9: **</font> \n",
     "- Load data from \"microchip.txt\" file and extract each column.  \n",
-    "**Hint:** You could use [loadtxt](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.loadtxt.html) function from numpy library.\n"
+    "**Hint:** You could use [loadtxt](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.loadtxt.html) function from numpy library.\n",
+    "\n",
+    "**Note:** The two tests score have the same scale [-1,1]. Thus, we don't need to do feature normalization.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# load data\n",
@@ -476,7 +498,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# calculate optimal theta\n",
