--- a/Lab3/Lab3_Logitic_Regression.ipynb
+++ b/Lab3/Lab3_Logitic_Regression.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "# evaluate cost function at theta_init\n",
     "theta_init=np.array([[0],[0],[0]],dtype=float)\n",
-    "cost = cost_func(theta_init)\n",
+    "cost = MSE_cost_func(theta_init)\n",
     "print(\"MSE cost function for theta={0} is : {1}\".format(theta_init[:,0],cost))\n",
     "\n",
     "theta_1 = np.linspace(-5,5,50) # you could also use: theta_1 = np.arange(100, 300, 2)\n",
