--- a/Lab3/Lab3_Logitic_Regression.ipynb
+++ b/Lab3/Lab3_Logitic_Regression.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "#### Logistic cost function\n",
     "<font color=\"blue\">**Question 4: **</font> \n",
-    "- Implement the \"cost_func\" function that evaluate and return the logistic cost function given in the following equation (make a vectorized implementation): $$J(\\theta)=\\frac{-1}{m}\\sum_{i=1}^{m}\\left [y\\times log(h_\\theta(x))+(1-y)\\times log(1-h_\\theta(x))\\right ]$$"
+    "- Implement the \"cost_func\" function that evaluate and return the logistic cost function (inspired from maximum likelihood equation) given in the following equation (make a vectorized implementation): $$J(\\theta)=\\frac{-1}{m}\\sum_{i=1}^{m}\\left [y\\times log(h_\\theta(x))+(1-y)\\times log(1-h_\\theta(x))\\right ]$$"
    ]
   },
   {
