--- a/Lab5/Lab5_Cross_Validation_Regularization.ipynb
+++ b/Lab5/Lab5_Cross_Validation_Regularization.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -87,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
@@ -135,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "students_results_test =  # ** your code here** \n",
@@ -185,6 +191,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -266,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics.regression import mean_squared_error\n",
@@ -339,7 +348,7 @@
     "\n",
     "The regularization helps to avoid the problem of overfitting by reducing or even making null $\\theta_j's$ of non significant features. The idea is to include the sum of $\\theta_j's$ in cost function in order to reduce them and remove useless features in our models.\n",
     "\n",
-    "The regularized cost function is equal to: $$J_{Reg}(\\theta)= J(\\theta)+\\frac{\\lambda}{2}\\times\\sum_{j=1}^{n-1} \\theta_j^2$$\n",
+    "The regularized cost function is equal to: $$J_{Reg}(\\theta)= J(\\theta)+\\frac{\\lambda}{2m}\\times\\sum_{j=1}^{n-1} \\theta_j^2$$\n",
     "\n",
     "The gradient of regularized cost function is equal to: \n",
     "\n",
@@ -347,7 +356,7 @@
     "\\\\ \\frac{\\partial J(\\theta)}{\\partial \\theta_1}\n",
     "\\\\ \\vdots\n",
     "\\\\ \\frac{\\partial J(\\theta)}{\\partial \\theta_{n-1}}\n",
-    "\\end{bmatrix}+\\lambda \\begin{bmatrix}0\n",
+    "\\end{bmatrix}+\\frac{\\lambda}{m} \\begin{bmatrix}0\n",
     "\\\\ \\theta_1\n",
     "\\\\ \\vdots\n",
     "\\\\ \\theta_{n-1}\n",
@@ -366,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -423,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# calculate train accuracy\n",
