--- a/Lab6/oneVsAll_Regularized_Classifier(correction).ipynb
+++ b/Lab6/oneVsAll_Regularized_Classifier(correction).ipynb
@@ -111,7 +111,7 @@
     "    plt.show()\n",
     "    \n",
     "    # predict the digit\n",
-    "    prediction=OneVsAll_Classifier.Predict_OneVsAll(Logistic_Regr_List,img.flatten()[np.newaxis,:])\n",
+    "    prediction=Predict_OneVsAll(Logistic_Regr_List,img.flatten()[np.newaxis,:])\n",
     "    return prediction\n",
     "\n"
    ]
