--- a/Lab6/oneVsAll_Regularized_Classifier.ipynb
+++ b/Lab6/oneVsAll_Regularized_Classifier.ipynb
@@ -112,7 +112,7 @@
     "    plt.show()\n",
     "    \n",
     "    # predict the digit\n",
-    "    prediction=OneVsAll_Classifier.Predict_OneVsAll(Logistic_Regr_List,img.flatten()[np.newaxis,:])\n",
+    "    prediction=Predict_OneVsAll(Logistic_Regr_List,img.flatten()[np.newaxis,:])\n",
     "    return prediction\n",
     "\n"
    ]
@@ -205,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# load data\n",
