--- a/Lab7/Lab7_SVM.ipynb
+++ b/Lab7/Lab7_SVM.ipynb
@@ -251,6 +251,8 @@
     "### Tune standard deviation $\\sigma$ with K-fold cross validation\n",
     "\n",
     "In this part, we will tune the standard deviation $\\sigma$ of the Gaussian kernel using K-fold method to evaluate the performance on cross validation set. Then, we will select the value of sigma that gives the best accuracy.\n",
+    "The K-fold consists dividing the training set to K blocks. Then, we consider one of the blocks as validation set (or test set)  and we consider the rest of data as training set. After fitting the model we evaluate its performance en the chosen validation fold (group). We repeat this process on all the K-folds. Hence, we get K estimations of the performance then we calculate their mean to get a more reliable estimation.\n",
+    "![k-fold-diagram](k-fold-diagram.png)\n",
     "\n",
     "<font color=\"blue\">**Question 5: **</font> \n",
     "- Load the data from \"data_3.txt\" file. (use [loadtxt](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.loadtxt.html) function from numpy library).\n",
@@ -263,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from math import floor\n",
